--- a/package.json
+++ b/package.json
@@ -1,5 +1,4 @@
 {
-  "homepage": "http://CTD-Crush-The-Development.github.io/co-wallet-frontend",
   "name": "co-wallet-frontend",
   "version": "0.1.0",
   "private": true,
@@ -11,11 +10,13 @@
     "@types/node": "^16.18.9",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.9",
+    "axios": "^1.2.1",
     "classnames": "^2.3.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.4.5",
     "react-scripts": "5.0.1",
+    "recoil": "^0.7.6",
     "sass": "^1.56.2",
     "web-vitals": "^2.1.4"
   },
