--- a/package.json
+++ b/package.json
@@ -82,6 +82,7 @@
     "gh-pages": "^4.0.0",
     "prettier": "^2.8.1",
     "prop-types": "^15.8.1",
+    "storybook-addon-react-router-v6": "^0.2.1",
     "typescript": "^4.9.4",
     "webpack": "^5.75.0"
   }
